--- a/tuto1.html
+++ b/tuto1.html
@@ -60,11 +60,12 @@
 
 
             </div>
-
+  
             <div id="bas">
                 <div id="b1"> ADRESSE</div>
                 <div id="b2"> INFORMATIONS</div>
                 <div id="b3"> PARTENAIRES</div>
+              <div> id="b4">locaux</div>
             </div>
 
       </div>
