--- a/tuto1.html
+++ b/tuto1.html
@@ -65,6 +65,7 @@
                 <div id="b1"> ADRESSE</div>
                 <div id="b2"> INFORMATIONS</div>
                 <div id="b3"> PARTENAIRES</div>
+              <di id="b4"> test</div>
             </div>
 
       </div>
